@@ -25,7 +25,7 @@ public class WRNestedList extends WOComponent  {
      */
 
     public void pushLevel()  {
-        setValueForBinding( new Integer(1) , "level" );
+        setValueForBinding( Integer.valueOf(1) , "level" );
     }
 
     /**
@@ -35,7 +35,7 @@ public class WRNestedList extends WOComponent  {
      */
 
     public void  popLevel()  {
-        setValueForBinding( new Integer(0) , "level" );
+        setValueForBinding( Integer.valueOf(0) , "level" );
     }
 
 
@@ -57,7 +57,7 @@ public class WRNestedList extends WOComponent  {
      */
 
     public void setCurrentLevel(Number aChildLevel)  {
-        setValueForBinding(new Integer(aChildLevel.intValue() + 1) , "level");
+        setValueForBinding(Integer.valueOf(aChildLevel.intValue() + 1) , "level");
     }
 
     /**
